[metadata]
name = autolog
author = Documatic
description = Autogenerate CHANGELOG/release notes from git history
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    requests
    python-dotenv

[options.entry_points]
console_scripts =
    autolog = autolog.main:generate_changelog
