[metadata]
name = autolog
author = Documatic
author_email = info@documatic.com
description = Autogenerate CHANGELOG/release notes from git history
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DocumaticAI/autolog
project_urls =
    Bug Tracker = https://github.com/DocumaticAI/autolog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Documentation
    Topic :: Software Development :: Documentation

[options]
packages = find:
install_requires =
    requests
    python-dotenv

[options.entry_points]
console_scripts =
    autolog = autolog.main:generate_changelog
